--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ http://scal.io -- check us out.
 
         <div id="bg-container">
 
-            <div class="header-container">
+            <div class="header-container sticky">
                 <div id="heading" class="wrapper clearfix">
                     <nav id="nav">
                         <ul>
@@ -70,16 +70,12 @@ http://scal.io -- check us out.
 
                     <header>
                         <div id="introtext">
-                            <span class="head-sarah">Sarah</span>
+                            <span class="head-sarah">Liana</span>
                             <span class="head-brad">&nbsp;
                                 <span class="amp">&amp;</span> 
-                                BRADLEY
+                                Jonathan
                             </span>
-                            <div class="date">SEPTEMBER 6<sup>th</sup>, 2013</div>
-                        </div>
-
-                        <div class="learnmore" style="background-color: red; padding: 30px 0 30px 0; font-size: 22px;">
-                            Learn more about Bradley's mobile &amp; web design/development creations at &nbsp;&nbsp;<a href="http://scal.io" target="_blank"><strong>http://scal.io</strong></a>
+                            <div class="date">AUGUST 30<sup>th</sup>, 2015</div>
                         </div>
                     </header>
 
