--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main-1.6.css">
+        
+        <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
@@ -37,7 +39,7 @@ Tailored for Jonathan and Liana, by Jonathan
 ****************************************************************************************************-->
 
         <div id="bg-image">
-            <img src="img/bg-pic.jpg" alt="bg" />
+            <img src="/img/bg-pic.jpg" alt="bg" />
         </div>
 
         <div id="bg-container">
@@ -68,7 +70,7 @@ Tailored for Jonathan and Liana, by Jonathan
                                 <span class="amp">&amp;</span> 
                                 Jonathan
                             </span>
-                            <div class="date">AUGUST 30<sup>th</sup>, 2015</div>
+                            <div class="date">August 30<sup>th</sup>, 2015</div>
                         </div>
                     </header>
 
