--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
         <style type="text/css">
             @font-face {
                 font-family: "Drawing with markers";
-                src: url(/drawing-with-markers.ttf);
+                src: url(/font/drawing-with-markers.ttf);
             }
             #font1 {
                 font-family: Arial;
