--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Tailored for Jonathan and Liana, by Jonathan
                         <ul>
                             <li><a href="/thecouple">THE COUPLE</a></li>
                             <li><a href="/theweddingparty">THE WEDDING PARTY</a></li>
-                            <li><a href="/thebigday">THE BIG DAY</a></li>
+                            <li><a href="/thewhereandwhen">THE WHERE AND WHEN</a></li>
                             <li><a href="/accommodations">ACCOMMODATIONS</a></li>
                             <li><a href="/registry">REGISTRY</a></li>
                             <li><a href="/rsvp">RSVP</a></li>
