--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@ Tailored for Jonathan and Liana, by Jonathan
                 <div id="heading" class="wrapper clearfix">
                     <nav id="nav">
                         <ul>
-                            <li><a href="thecouple">THE COUPLE</a></li>
-                            <li><a href="theweddingparty">THE WEDDING PARTY</a></li>
-                            <li><a href="thewhereandwhen">THE WHERE AND WHEN</a></li>
-                            <li><a href="accommodations">ACCOMMODATIONS</a></li>
-                            <li><a href="registry">REGISTRY</a></li>
-                            <li><a href="rsvp">RSVP</a></li>
+                            <li><a href="./thecouple">THE COUPLE</a></li>
+                            <li><a href="./theweddingparty">THE WEDDING PARTY</a></li>
+                            <li><a href="./thewhereandwhen">THE WHERE AND WHEN</a></li>
+                            <li><a href="./accommodations">ACCOMMODATIONS</a></li>
+                            <li><a href="./registry">REGISTRY</a></li>
+                            <li><a href="./rsvp">RSVP</a></li>
                         </ul>
 
                     </nav>
