--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Tailored for Jonathan and Liana, by Jonathan
             <img src="img/bg-pic.jpg" alt="bg" />
         </div>
 
-        <div id="bg-container">
+        <div id="home-bg-container">
 
             <div class="header-container sticky">
                 <div id="heading" class="wrapper clearfix">
@@ -59,25 +59,16 @@ Tailored for Jonathan and Liana, by Jonathan
                     </nav>
                 </div>
             </div>
+            <div id="introtext">
+                <span class="head-liana">Liana</span>
+                <span class="head-jonathan">&nbsp;
+                    <span class="amp">&amp;</span> 
+                    Jonathan
+                </span>
+                <div class="date">August 30<sup>th</sup>, 2015</div>
+            </div>
 
-            <div class="main-container">
-                <div class="main wrapper clearfix">
-
-                    <header>
-                        <div id="introtext">
-                            <span class="head-liana">Liana</span>
-                            <span class="head-jonathan">&nbsp;
-                                <span class="amp">&amp;</span> 
-                                Jonathan
-                            </span>
-                            <div class="date">August 30<sup>th</sup>, 2015</div>
-                        </div>
-                    </header>
-
-                    <div class="clearfix"></div>
-
-                </div> <!-- #main -->
-            </div> <!-- #main-container -->
+            <div class="clearfix"></div>
         </div> <!-- #bg-container -->
 
         <script src="js/main-1.6.js"></script>
