Update wedding party pictures

--- a/theweddingparty/index.html
+++ b/theweddingparty/index.html
@@ -93,13 +93,13 @@ Tailored for Jonathan and Liana, by Jonathan
         		$container.append('<li class="tile-loading elisabeth"><img src="../img/wp/liz2.jpg"></li>');
         		$container.append('<li class="tile-loading louie"><img src="../img/wp/louu.jpg"></li>');
         		$container.append('<li class="tile-loading paolo"><img src="../img/wp/paul.jpg"></li>');
-        		$container.append('<li class="tile-loading vanessa"><img src="../img/wp/vanvan.jpg"></li>');
         		$container.append('<li class="tile-loading helene"><img src="../img/wp/helena.jpg"></li>');
-        		/*$container.append('<li class="tile-loading isabella"><img src="../img/wp/zab.jpg"></li>');*/
-        		$container.append('<li class="tile-loading alexandre"><img src="../img/wp/rieeel2.jpg"></li>');
+        		$container.append('<li class="tile-loading isabella"><img src="../img/wp/zab.jpg"></li>');
         		$container.append('<li class="tile-loading ryan"><img src="../img/wp/ryry.jpg"></li>');
+        		$container.append('<li class="tile-loading alexandre"><img src="../img/wp/rieeel2.jpg"></li>');
+        		$container.append('<li class="tile-loading vanessa"><img src="../img/wp/vanvan.jpg"></li>');
         		$container.append('<li class="tile-loading david"><img src="../img/wp/david.jpg"></li>');
-        		$container.append('<li class="tile-loading aleksandra"><img src="../img/wp/alink.jpg"></li>');
+        		$container.append('<li class="tile-loading aleksandra"><img src="../img/wp/alink2.jpg"></li>');
         		
         		$("#wp-container").find("img").each(function(index) {
         			this.onload = function() {
