--- a/theweddingparty/index.html
+++ b/theweddingparty/index.html
@@ -51,7 +51,7 @@ Tailored for Jonathan and Liana, by Jonathan
                     <nav id="nav">
                         <ul>
                             <li><a href="../thecouple">THE COUPLE</a></li>
-                            <li><a href="../theweddingparty">THE WEDDING PARTY</a></li>
+                            <li><a class="selected" href="../theweddingparty">THE WEDDING PARTY</a></li>
                             <li><a href="../thewhereandwhen">THE WHERE AND WHEN</a></li>
                             <li><a href="../accommodations">ACCOMMODATIONS</a></li>
                             <li><a href="../registry">REGISTRY</a></li>
@@ -63,9 +63,11 @@ Tailored for Jonathan and Liana, by Jonathan
             </div>
 
             <div class="main-container">
-                <div id="wp-pictures" class="wedding-party wp-wrapper clearfix">
-
-                    <ul id="wp-container" class="tiles-wrap"></ul>
+                <div class="wedding-party wp-wrapper clearfix">
+                	
+                	<div id="wp-pictures">
+                    	<ul id="wp-container" class="tiles-wrap"></ul>
+                	</div>
 
                     <div class="clearfix"></div>
 
@@ -74,6 +76,7 @@ Tailored for Jonathan and Liana, by Jonathan
         </div> <!-- #bg-container -->
 
         <script src="../js/main-1.6.js"></script>
+		
         <script>
         	(function ($){
         		var loadedImages = 0,
