Changes to accomodation text/clarification

--- a/accommodations/index.html
+++ b/accommodations/index.html
@@ -51,7 +51,7 @@ Tailored for Jonathan and Liana, by Jonathan
                             <li><a href="../thecouple">THE COUPLE</a></li>
                             <li><a href="../theweddingparty">THE WEDDING PARTY</a></li>
                             <li><a href="../thewhereandwhen">THE WHERE AND WHEN</a></li>
-                            <li><a href="../accommodations">ACCOMMODATIONS</a></li>
+                            <li><a class="selected" href="../accommodations">ACCOMMODATIONS</a></li>
                             <li><a href="../registry">REGISTRY</a></li>
                             <li><a href="../rsvp">RSVP</a></li>
                         </ul>
@@ -77,7 +77,7 @@ Tailored for Jonathan and Liana, by Jonathan
                                 Contact Kim: <a href="tel:1-905-358-5555">(905) 358-5555</a> <br />
                                 $160 for Saturday night <br />
                                 $120 for Sunday night <br />
-                                or $130 for both nights <br />
+                                or $130 per night, if staying both nights <br />
                                 <a href="http://www.niagarafallshamptoninn.com/">website</a> <br/>
                                 <br />
                                 <strong>Colonel Butler Inn</strong> <br />
@@ -97,13 +97,12 @@ Tailored for Jonathan and Liana, by Jonathan
                             <p>
 								<p>
 									The hotels listed here have a number of blocked rooms with discounted rates
-									for guests of our Wedding. Just make sure to reference the Pace-Gravel wedding
+									for guests of our Wedding. Just make sure to reference the Gravel-Pace wedding
 									for the discounted rate.
 								</p>
 								<p>
-									Depending on the popularity of the Hampton Inn hotel, we can organize a shuttle service to
-									and from the wedding. When RSVP'ing, please indicate whether you are planning to
-									book one of the blocked rooms!
+									Depending on the number of bookings at the Hampton Inn hotel, we may be able to
+									organize a shuttle service to and from the wedding.
 								</p>
 								<p>
 									For guests that only need to be accommodated the night of the wedding, we
