ie fix home page, .selected nav bar

--- a/index.html
+++ b/index.html
@@ -60,12 +60,7 @@ Tailored for Jonathan and Liana, by Jonathan
                 </div>
             </div>
             <div id="introtext">
-                <span class="head-liana">Liana</span>
-                <span class="head-jonathan">&nbsp;
-                    <span class="amp">&amp;</span> 
-                    Jonathan
-                </span>
-                <div class="date">August 30<sup>th</sup>, 2015</div>
+                <div class="jonathanandliana"><img src="img/jonathanandliana.png"/></div>
             </div>
 
             <div class="clearfix"></div>
