--- a/thecouple/index.html
+++ b/thecouple/index.html
@@ -48,7 +48,7 @@ Tailored for Jonathan and Liana, by Jonathan
                 <div id="heading" class="wrapper clearfix">
                     <nav id="nav">
                         <ul>
-                            <li><a href="../thecouple">THE COUPLE</a></li>
+                            <li><a class="selected" href="../thecouple">THE COUPLE</a></li>
                             <li><a href="../theweddingparty">THE WEDDING PARTY</a></li>
                             <li><a href="../thewhereandwhen">THE WHERE AND WHEN</a></li>
                             <li><a href="../accommodations">ACCOMMODATIONS</a></li>
