--- a/registry/index.html
+++ b/registry/index.html
@@ -52,7 +52,7 @@ Tailored for Jonathan and Liana, by Jonathan
                             <li><a href="../theweddingparty">THE WEDDING PARTY</a></li>
                             <li><a href="../thewhereandwhen">THE WHERE AND WHEN</a></li>
                             <li><a href="../accommodations">ACCOMMODATIONS</a></li>
-                            <li><a href="../registry">REGISTRY</a></li>
+                            <li><a class="selected" href="../registry">REGISTRY</a></li>
                             <li><a href="../rsvp">RSVP</a></li>
                         </ul>
 
