Update accomodations page

--- a/accommodations/index.html
+++ b/accommodations/index.html
@@ -97,8 +97,12 @@ Tailored for Jonathan and Liana, by Jonathan
                             <p>
 								<p>
 									The hotels listed here have a number of blocked rooms with discounted rates
-									for guests of our Wedding. Just make sure to reference the Gravel-Pace wedding
-									for the discounted rate.
+									for guests of our wedding. Please reference the Gravel wedding for the discounted rate.<br />
+									<span class="accomodations-update">*UPDATE: An additional 25 rooms at the Hampton Inn are now
+									blocked off under Pace. Because they were not blocked off quite as early as the first 25 however,
+									they are slightly pricier - so try Gravel first!</span>
+									
+									
 								</p>
 								<p>
 									Depending on the number of bookings at the Hampton Inn hotel, we may be able to
