--- a/thewhereandwhen/index.html
+++ b/thewhereandwhen/index.html
@@ -60,17 +60,79 @@ Tailored for Jonathan and Liana, by Jonathan
                 </div>
             </div>
 
-            <div class="main-container">
-                <div class="main wrapper clearfix">
+             <div class="main-container">
+                <div class="accomodations wrapper clearfix">
+                    <section id="accomodations" class="clearfix">
+                		<h1>The Where and When</h1>
 
-                    <header>
-                        <div id="notfinished">
-                            This page is under construction. Please check again soon!
+                        <div class="column left">
+
+                            <h2>WHERE</h2>
+                            <p>
+                                <strong>The Hampton Inn by Hilton North-of-the-Falls</strong> <br />
+                                Kurtz Orchard <br />
+								16006 Niagara Parkway <br />
+								Niagara-On-The-Lake, ON
+                            </p>
                         </div>
-                    </header>
+                        <div class="column right">
+                            <h2>WHEN</h2>
+                            <p>
+                                Ceremony at 3:15 in the afternoon. <br />
+                                Cocktail hour &amp; reception to follow!
+                            </p>
+                        </div><!--end column-->
 
-                    <div class="clearfix"></div>
+                        <div class="clearfix"></div>
 
+                        <div class="column full">
+                            <h2>QUESTIONS</h2>
+                        </div>
+                        
+                        <div class="column left">
+                            <p>
+								<p>
+									Is the wedding outdoors? <br /> <br/>
+									Yes, everything will take place outdoors. While the reception will take place under a
+									tent with a dance floor, the rest will be on grass, so watch your shoes!
+								</p>
+								<p>
+									Where can I park? <br />
+									<br />
+									There is lots of parking at the venue - and signs to direct you from there to the party!
+									If you are parking your car overnight, please be sure to pick it up by 10 the next morning. 
+								</p>
+						</div>
+						<div class="column right">
+								<p>
+									What time does it end? <br />
+									<br />
+									We have the property until midnight but, due to Ontario's By-law restrictions, all amplified
+									music must be turned off at 11pm. Don't worry! We'll have acoustic guitars and fire pits to end the
+									night off nice and cozy for those that wanna stick around with us till the end. 
+								</p>
+								<p>
+									For any other questions, feel free to e-mail us at jonathanandliana.rsvp@gmail.com ! <br />
+									<br />
+									We're so excited, guys!
+								</p>
+                            </p>
+                            
+                        </div><!--end column-->
+
+                        <div class="clearfix"></div>
+
+                        <div class="column full">
+                            <div class="hr-t"></div>
+                            <div class="hr-b"></div>
+                        </div>
+                	<!--div id="accomodations-container">
+                		<div class="wot">
+						</div>
+					</div-->
+
+                    	<div class="clearfix"></div>
+					</section>
                 </div> <!-- #main -->
             </div> <!-- #main-container -->
         </div> <!-- #bg-container -->
