--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Tailored for Jonathan and Liana, by Jonathan
 ****************************************************************************************************-->
 
         <div id="bg-image">
-            <img src="img/bg-pic.jpg" alt="bg" />
+            <img src="img/bg-pic-4.jpg" alt="bg" />
         </div>
 
         <div id="home-bg-container">
@@ -60,7 +60,12 @@ Tailored for Jonathan and Liana, by Jonathan
                 </div>
             </div>
             <div id="introtext">
-                <div class="jonathanandliana"><img src="img/jonathanandliana.png"/></div>
+                <span class="head-liana">Liana</span>
+                <span class="head-jonathan">&nbsp;
+                    <span class="amp">&amp;</span>
+                    Jonathan
+                </span>
+                <div class="date">August 30<sup>th</sup>, 2015</div>
             </div>
 
             <div class="clearfix"></div>
