--- a/registry/index.html
+++ b/registry/index.html
@@ -23,7 +23,7 @@
 
         <link rel="stylesheet" href="../css/normalize.min.css">
         <link rel="stylesheet" href="../css/main-1.6.css">
-        
+
         <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
 
         <script src="../js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
@@ -32,14 +32,14 @@
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
-        
+
 <!--**************************************************************************************************
 Initial work by Bradley Greenwood (http://scal.io).
 Tailored for Jonathan and Liana, by Jonathan
 ****************************************************************************************************-->
 
         <div id="bg-image">
-            <img src="../img/bg-pic.jpg" alt="bg" />
+            <img src="../img/bg-pic-4.jpg" alt="bg" />
         </div>
 
         <div id="bg-container">
@@ -60,22 +60,13 @@ Tailored for Jonathan and Liana, by Jonathan
                 </div>
             </div>
 
-            <div class="main-container">
-                <div class="main wrapper clearfix">
-
-                    <header>
-                        <div id="notfinished">
-                            This page is under construction. Please check again soon!
-                        </div>
-                    </header>
-
-                    <div class="clearfix"></div>
-
-                </div> <!-- #main -->
-            </div> <!-- #main-container -->
+            <div id="notfinished">
+                <div>
+                    This page is under construction. <br />
+                    Please check again soon!
+                </div>
+            </div>
         </div> <!-- #bg-container -->
-
-        <script src="js/main-1.6.js"></script>
 
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
