--- a/thecouple/index.html
+++ b/thecouple/index.html
@@ -39,7 +39,7 @@ Tailored for Jonathan and Liana, by Jonathan
 ****************************************************************************************************-->
 
         <div id="bg-image">
-            <img src="../img/bg-pic.jpg" alt="bg" />
+            <img src="../img/bg-pic-4.jpg" alt="bg" />
         </div>
 
         <div id="bg-container">
@@ -60,22 +60,15 @@ Tailored for Jonathan and Liana, by Jonathan
                 </div>
             </div>
 
-            <div class="main-container">
-                <div class="main wrapper clearfix">
-
-                    <header>
-                        <div id="notfinished">
-                            This page is under construction. Please check again soon!
-                        </div>
-                    </header>
-
-                    <div class="clearfix"></div>
-
-                </div> <!-- #main -->
-            </div> <!-- #main-container -->
+            <div id="introtext">
+                <span class="head-liana">Liana</span>
+                <span class="head-jonathan">&nbsp;
+                    <span class="amp">&amp;</span>
+                    Jonathan
+                </span>
+                <div class="date">August 30<sup>th</sup>, 2015</div>
+            </div>
         </div> <!-- #bg-container -->
-
-        <script src="js/main-1.6.js"></script>
 
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
