--- a/thewhereandwhen/index.html
+++ b/thewhereandwhen/index.html
@@ -67,16 +67,15 @@ Tailored for Jonathan and Liana, by Jonathan
 
                         <div class="column left">
 
-                            <h2>WHERE</h2>
+                            <h2>where</h2>
                             <p>
-                                <strong>The Hampton Inn by Hilton North-of-the-Falls</strong> <br />
                                 Kurtz Orchard <br />
 								16006 Niagara Parkway <br />
 								Niagara-On-The-Lake, ON
                             </p>
                         </div>
                         <div class="column right">
-                            <h2>WHEN</h2>
+                            <h2>when</h2>
                             <p>
                                 Ceremony at 3:15 in the afternoon. <br />
                                 Cocktail hour &amp; reception to follow!
@@ -86,27 +85,25 @@ Tailored for Jonathan and Liana, by Jonathan
                         <div class="clearfix"></div>
 
                         <div class="column full">
-                            <h2>QUESTIONS</h2>
+                            <h2>questions</h2>
                         </div>
                         
                         <div class="column left">
                             <p>
 								<p>
-									Is the wedding outdoors? <br /> <br/>
+                                    <strong>Is the wedding outdoors?</strong> <br />
 									Yes, everything will take place outdoors. While the reception will take place under a
 									tent with a dance floor, the rest will be on grass, so watch your shoes!
 								</p>
 								<p>
-									Where can I park? <br />
-									<br />
+                                    <strong>Where can I park?</strong> <br />
 									There is lots of parking at the venue - and signs to direct you from there to the party!
 									If you are parking your car overnight, please be sure to pick it up by 10 the next morning. 
 								</p>
 						</div>
 						<div class="column right">
 								<p>
-									What time does it end? <br />
-									<br />
+                                    <strong>What time does it end?</strong> <br />
 									We have the property until midnight but, due to Ontario's By-law restrictions, all amplified
 									music must be turned off at 11pm. Don't worry! We'll have acoustic guitars and fire pits to end the
 									night off nice and cozy for those that wanna stick around with us till the end. 
@@ -120,24 +117,11 @@ Tailored for Jonathan and Liana, by Jonathan
                             
                         </div><!--end column-->
 
-                        <div class="clearfix"></div>
-
-                        <div class="column full">
-                            <div class="hr-t"></div>
-                            <div class="hr-b"></div>
-                        </div>
-                	<!--div id="accomodations-container">
-                		<div class="wot">
-						</div>
-					</div-->
-
                     	<div class="clearfix"></div>
 					</section>
                 </div> <!-- #main -->
             </div> <!-- #main-container -->
         </div> <!-- #bg-container -->
-
-        <script src="js/main-1.6.js"></script>
 
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
