--- a/accommodations/index.html
+++ b/accommodations/index.html
@@ -63,7 +63,7 @@ Tailored for Jonathan and Liana, by Jonathan
             <div class="main-container">
                 <div class="accomodations wrapper clearfix">
                     <section id="accomodations" class="clearfix">
-                		<h1>Accomodations</h1>
+                		<h1>Accommodations</h1>
 
                         <div class="column left">
 
