--- a/thewhereandwhen/index.html
+++ b/thewhereandwhen/index.html
@@ -39,7 +39,7 @@ Tailored for Jonathan and Liana, by Jonathan
 ****************************************************************************************************-->
 
         <div id="bg-image">
-            <img src="../img/bg-pic.jpg" alt="bg" />
+            <img src="../img/bg-pic-4.jpg" alt="bg" />
         </div>
 
         <div id="bg-container">
