--- a/registry/index.html
+++ b/registry/index.html
@@ -60,12 +60,27 @@ Tailored for Jonathan and Liana, by Jonathan
                 </div>
             </div>
 
-            <div id="notfinished">
-                <div>
-                    This page is under construction. <br />
-                    Please check again soon!
-                </div>
-            </div>
+             <div class="main-container">
+                <div class="registry wrapper clearfix">
+                    <section id="registry" class="clearfix">
+                		<h1>The Registry</h1>
+
+                        <div class="column full">
+                            <h2>Click on one of the registry links below!</h2>
+                        </div>
+                        <br/>
+                        <div class="column left links">
+                            <a href="http://giftregistry.hbc.com/grworks/prj/generic_online/jsp/common/grbookmark.jsp?retailerid=4&registryid=400124312681"><img src="../img/hbc-white.png"/></a><br/>
+                        </div>
+                        <div class="column right links">
+                            <a href="http://www.bedbathandbeyond.ca/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=542028549&pwsurl="><img src="../img/bbb-white.png"/></a>
+                        </div>
+                        </div><!--end column-->
+
+                    	<div class="clearfix"></div>
+					</section>
+                </div> <!-- #main -->
+            </div> <!-- #main-container -->
         </div> <!-- #bg-container -->
 
         <script>
